# expense-bot-cpp

./: .clang-format  .clang-tidy  .env.template  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  Dockerfile  GEMINI.md  Makefile  builder.Dockerfile  docker-compose.prod.yml  docker-compose.yml  implementation_plan.md  vcpkg.json
.github/workflows/: deploy.yml
include/: connection_pool.hpp  db_processor.hpp  gemini_client.hpp  processor.hpp  receiver.hpp  replier.hpp  worker_pool.hpp
include/models/: expense.hpp
src/: config.cpp  connection_pool.cpp  db_processor.cpp  gemini_client.cpp  main.cpp  ollama_client.cpp  processor.cpp  receiver.cpp  replier.cpp  worker_pool.cpp
